data/all_generated_tests/raw_wast_tests/loop_StackCorruption_332.wast
;; 3. **Test 3**:    - **Description**: Construct a loop with conditional branching based on stack-top values. These values are generated by previous loop iterations.    - **Constraint**: Validity of conditional branch instructions checking stack-top values.    - **Stack Corruption Check**: Ensure no stack corruption when re-reading the top values after several iterations.

(assert_invalid
 (module
  (func (param i32) (result i32)
   (local.get 0)
   (loop (result i32)
    (local.get 0)
    (i32.const 1)
    (i32.sub)
    (local.set 0)
    (local.get 0)
    (br_if 0)
   )
  )
 )
 "type mismatch"
)